# borning-challenge

./: .gitignore  README.md
backend/: .env.example  Makefile  pyproject.toml
backend/scripts/: seed_db.py
backend/src/: config.py  database.py  main.py
backend/src/data/: seed.py
backend/src/models/: activity.py  team.py
backend/src/routers/: teams.py  users.py
backend/src/services/: stats.py  team_service.py  user_service.py
backend/tests/: test_teams.py  test_users.py
frontend/: Makefile  pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: activity.dart  activity_stats.dart  team_stats.dart
frontend/lib/pages/: team_activities_page.dart  user_activities_page.dart
frontend/lib/services/: api_service.dart
frontend/lib/utils/: activity_helpers.dart
frontend/lib/widgets/: activity_list.dart  async_content.dart  charts_widget.dart  stats_cards.dart
frontend/test/: activity_helpers_test.dart  activity_list_test.dart  async_content_test.dart  models_test.dart  stats_cards_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
